5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1871_1723.log
== TEST (2019-07-02 16:22:53) 
-- CODE:
from numpy import * 
from nump.linalg import *

vetor = array(eval(input('matriz:')))

produto1 = dot(vetor[0], 0)

print(produto1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:00) 
-- CODE:
from numpy import * 
from nump.linalg import *

vetor = array(eval(input('matriz:')))

produto1 = dot(vetor[0], 0)

print(produto1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:06) 
-- CODE:
from numpy import * 
from numpy.linalg import *

vetor = array(eval(input('matriz:')))

produto1 = dot(vetor[0], 0)

print(produto1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:33) 
-- CODE:
from numpy import * 
from numpy.linalg import *

vetor = array(eval(input('matriz:')))

produto1 = dot(shape[0])
print(produto1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:26) 
-- CODE:
from numpy import * 
from numpy.linalg import *

vetor = array(eval(input('matriz:')))
print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:04) 
-- CODE:
from numpy import * 
from numpy.linalg import *

vetor = array(eval(input('matriz:')))
x = vetor[0]

print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:34) 
-- CODE:
from numpy import * 
from numpy.linalg import *

vetor = array(eval(input('matriz:')))
x = vetor[0]
y = vetor [1]

print(x)
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:22) 
-- CODE:
from numpy import * 
from numpy.linalg import *

vetor = array(eval(input('matriz:')))
x = vetor[0]
y = vetor [1]
z = vetor[2]

print(x)
print(y)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:51) 
-- CODE:
from numpy import * 
from numpy.linalg import *

vetor = array(eval(input('matriz:')))
x = vetor[0]
y = vetor [1]
z = vetor[2]
c = shape(veotr[0])

print(x)
print(y)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:00) 
-- CODE:
from numpy import * 
from numpy.linalg import *

vetor = array(eval(input('matriz:')))
x = vetor[0]
y = vetor [1]
z = vetor[2]
c = shape(veotr[0])

print(x)
print(y)
print(z)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:11) 
-- CODE:
from numpy import * 
from numpy.linalg import *

vetor = array(eval(input('matriz:')))
x = vetor[0]
y = vetor [1]
z = vetor[2]
c = shape(vetor[0])

print(x)
print(y)
print(z)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:44:47) 
-- CODE:
from numpy import * 
from numpy.linalg import *

matriz = array(eval(input('matriz:')))

precototal= round(sum(matriz[:,0]*matriz[:,1], 2)
print(precototal)



-- ERROR:
File "XXXX", line 7
    print(precototal)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:26) 
-- CODE:
from numpy import * 
from numpy.linalg import *

mat = array(eval(input('matriz:')))

precototal= round(sum(mat[:,0]*mat[:,1]), 2)
print(precototal)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:45:42) 
-- CODE:
from numpy import * 
from numpy.linalg import *

mat = array(eval(input('matriz:')))

precototal= round(sum(mat[:,0]*mat[:,1]), 2)
print(precototal)



-- EXECUTION TIME:
0.967558
-- TEST CASE 1:
---- input:
[[8.7,8.6],[5.3,8.0],[0.3,4.4]]
---- correct output:
118.54
---- user output:
118.54
-- TEST CASE 2:
---- input:
[[9.5,0.5],[1.4,5.3],[9.4,2.6]]
---- correct output:
36.61
---- user output:
36.61
-- TEST CASE 3:
---- input:
[[9.4,3.0],[3.9,6.2],[8.8,5.2],[2.1,2.0]]
---- correct output:
102.34
---- user output:
102.34
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
